add initial layout of index webpage

--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <title></title>
   </head>
   <body>
+    <!-- nav -->
+    <!-- end nav -->
+    
+    <!-- carousel -->
+    <!-- end carousel -->
 
+    <div class="container">
+
+      <!-- columns -->
+      <!-- end columns -->
+
+
+    </div>
+    <!-- footer -->
+    <!-- end footer -->
+
+    <!-- script -->
     <script src="js/jquery.js" charset="utf-8"></script>
     <script src="js/bootstrap.min.js" charset="utf-8"></script>
+    <!-- script -->
   </body>
 </html>
