--- a/index.html
+++ b/index.html
@@ -4,23 +4,73 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="text/css" charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.theme.min.css" media="screen" title="theme/css" charset="utf-8">
     <link rel="stylesheet" href="css/mystyle.css" media="screen" title="no title" charset="utf-8">
-    <title></title>
+    <title>Alvin Ng</title>
   </head>
   <body>
     <!-- nav -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-collapse">
+          <ul class="navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <!-- end nav -->
-    
+
     <!-- carousel -->
+    <div class="btn">
+      <a href="#">Download my app</a>
+      <a href="#">Download my app</a>
+      <a href="#">Download my app</a>
+    </div>
     <!-- end carousel -->
-
     <div class="container">
-
       <!-- columns -->
+      <h1>p</h1>
+      <div class="row">
+        <div class="col-xs-4">
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+        </div>
+        <div class="col-xs-4">
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+        </div>
+        <div class="col-xs-4">
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+          <p>p</p>
+        </div>
+      </div>
+
+      <p>p</p>
+      <p>p</p>
+      <p>p</p>
+      <p>p</p>
+      <p>p</p>
+      <p>p</p>
+      <p>p</p>
+      <p>p</p>
+
       <!-- end columns -->
 
 
     </div>
     <!-- footer -->
+
     <!-- end footer -->
 
     <!-- script -->
