--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
   <body>
     <!-- nav -->
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
         </button>
-
-        <a class="navbar-brand text-muted" href="#">Logo</a>
+        <a class="navbar-brand" href="#">
+          <img class="img-responsive" src="img/alvin_logo.png" alt="brand"/>
+        </a>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a class="active" href="#">Home</a></li>
-              <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
+            <li class="active"><a href="#">Home</a></li>
+            <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Hobbies</a></li>
                   <li><a href="#">Work</a></li>
@@ -41,18 +45,38 @@
     <!-- end nav -->
 
     <!-- carousel -->
-
-    <div class="carousel">
-
-      <div class="buttons">
-        <a class="btn btn-success" href="#">Download my app</a>
-        <a class="btn btn-default" href="#">Download my app</a>
-        <a href="#">Download my app</a>
+      <div id="mycarousel" class="carousel slide jumbotron">
+        <div class="container">
+          <ol class="carousel-indicators">
+            <li class="active" data-target="#mycarousel" data-slide-to="0"></li>
+            <li data-target="#mycarousel" data-slide-to="1"></li>
+            <li data-target="#mycarousel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="item active">
+              <h1><strong>Alvin Ng</strong></h1>
+              <p class="lead">Welcome to my Website</p>
+              <a class="btn btn-success" href="#">Ask me a question</a>
+            </div>
+            <div class="item">
+              <h1><strong>Work</strong></h1>
+              <p class="lead">Take a look at my past and current projects</p>
+              <a class="btn btn-success" href="#">Download my portfolio</a>
+              <a class="btn btn-primary" href="#">Download my app</a>
+            </div>
+            <div class="item">
+              <h1><strong>Slide 3</strong></h1>
+              <p class="lead">Here are a few of my interests.</p>
+              <a class="btn btn-primary" href="mailto:fakeemailaddress@fmlsfafaf.com">Send me an email</a>
+            </div>
+          </div>
+        </div>
+        <a class="left carousel-control" href="#mycarousel" data-slide="prev"> <span class="icon-prev"></span></a>
+        <a class="right carousel-control" href="#mycarousel" data-slide="next"> <span class="icon-next"></span></a>
       </div>
-    </div>
     <!-- end carousel -->
+    <!-- columns -->
     <div class="container">
-      <!-- columns -->
       <h1>p</h1>
       <div class="row">
         <div class="col-xs-4">
@@ -73,11 +97,7 @@
         </div>
         <div class="col-xs-4">
           <h3>Thought 2</h3>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <div class="row">
             <div class="col-xs-12">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -86,9 +106,7 @@
         </div>
         <div class="col-xs-4">
           <h3>Thought 3</h3>
-          <p>p</p>
-
-          <p>p</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
           <div class="row">
             <div class="col-xs-11">
               <img class="img-responsive" src="img/dog.jpg" alt="dog" />
@@ -96,22 +114,37 @@
           </div>
         </div>
       </div>
-
-      <p>p</p>
-      <p>p</p>
-      <p>p</p>
-      <p>p</p>
-      <p>p</p>
-      <p>p</p>
-      <p>p</p>
-      <p>p</p>
-
-      <!-- end columns -->
-
-
     </div>
-    <!-- footer -->
+    <!-- end columns -->
+    </div>
 
+    <!-- footer -->
+    <div class="navbar navbar-inverse navbar-bottom">
+      <div class="container">
+        <a class="navbar-brand text-muted" href="#">Logo</a>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Hobbies</a></li>
+                  <li><a href="#">Work</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">Goals</a></li>
+                </ul>
+              </li>
+            <li class="dropdown"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
+              <ol class="dropdown-menu">
+                <li><a href="#">Hobbies</a></li>
+                <li><a href="#">Work</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Goals</a></li>
+              </ol>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <!-- end footer -->
 
     <!-- script -->
