link pages together

--- a/about.html
+++ b/about.html
@@ -20,16 +20,16 @@
         <a class="navbar-brand text-muted" href="#">Logo</a>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Home</a></li>
-            <li class="dropdown active"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Hobbies</a></li>
-                  <li><a href="#">Work</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Goals</a></li>
-                </ul>
-              </li>
-            <li class="dropdown"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="projects.html">Hobbies</a></li>
+                <li><a href="projects.html">Work</a></li>
+                <li class="divider"></li>
+                <li><a href="projects.html">Goals</a></li>
+              </ul>
+            </li>
+            <li class="dropdown active"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
               <ol class="dropdown-menu">
                 <li><a href="#">Hobbies</a></li>
                 <li><a href="#">Work</a></li>
