--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
         </a>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Hobbies</a></li>
-                  <li><a href="#">Work</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Goals</a></li>
-                </ul>
-              </li>
+              <ul class="dropdown-menu">
+                <li><a href="projects.html">Hobbies</a></li>
+                <li><a href="projects.html">Work</a></li>
+                <li class="divider"></li>
+                <li><a href="projects.html">Goals</a></li>
+              </ul>
+            </li>
             <li class="dropdown"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
               <ol class="dropdown-menu">
-                <li><a href="#">Hobbies</a></li>
-                <li><a href="#">Work</a></li>
+                <li><a href="about.html">Hobbies</a></li>
+                <li><a href="about.html">Work</a></li>
                 <li class="divider"></li>
-                <li><a href="#">Goals</a></li>
+                <li><a href="about.html">Goals</a></li>
               </ol>
             </li>
           </ul>
