--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="text/css" charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.theme.min.css" media="screen" title="theme/css" charset="utf-8">
-    <link rel="stylesheet" href="css/mystyle.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/mystyle.css" media="screen" title="text/css" charset="utf-8">
     <title>Alvin Ng</title>
   </head>
 
@@ -54,8 +54,10 @@
           </ol>
           <div class="carousel-inner">
             <div class="item active">
-              <h1><strong>Alvin Ng</strong></h1>
-              <p class="lead">Welcome to my Website</p>
+              <div class="lead">
+                <h1><strong>Alvin Ng</strong></h1>
+                <p>Welcome to my Website</p>
+              </div>
               <a class="btn btn-success" href="#">Ask me a question</a>
             </div>
             <div class="item">
@@ -70,9 +72,10 @@
               <a class="btn btn-primary" href="mailto:fakeemailaddress@fmlsfafaf.com">Send me an email</a>
             </div>
           </div>
+
+          <a class="left carousel-control" href="#mycarousel" data-slide="prev"> <span class="icon-prev"></span></a>
+          <a class="right carousel-control" href="#mycarousel" data-slide="next"> <span class="icon-next"></span></a>
         </div>
-        <a class="left carousel-control" href="#mycarousel" data-slide="prev"> <span class="icon-prev"></span></a>
-        <a class="right carousel-control" href="#mycarousel" data-slide="next"> <span class="icon-next"></span></a>
       </div>
     <!-- end carousel -->
     <!-- columns -->
@@ -119,32 +122,7 @@
     </div>
 
     <!-- footer -->
-    <div class="navbar navbar-inverse navbar-bottom">
-      <div class="container">
-        <a class="navbar-brand text-muted" href="#">Logo</a>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Hobbies</a></li>
-                  <li><a href="#">Work</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Goals</a></li>
-                </ul>
-              </li>
-            <li class="dropdown"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
-              <ol class="dropdown-menu">
-                <li><a href="#">Hobbies</a></li>
-                <li><a href="#">Work</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Goals</a></li>
-              </ol>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+
     <!-- end footer -->
 
     <!-- script -->
