updates projects page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <a class="btn btn-primary" href="#">Download my app</a>
             </div>
             <div class="item">
-              <h1><strong>Slide 3</strong></h1>
+              <h1><strong>About Me</strong></h1>
               <p class="lead">Here are a few of my interests.</p>
               <a class="btn btn-primary" href="mailto:fakeemailaddress@fmlsfafaf.com">Send me an email</a>
             </div>
