--- a/about.html
+++ b/about.html
@@ -24,7 +24,6 @@
             <li><a href="index.html">Home</a></li>
             <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="projects.html">Hobbies</a></li>
                 <li><a href="projects.html">Work</a></li>
                 <li class="divider"></li>
                 <li><a href="projects.html">Goals</a></li>
@@ -32,10 +31,9 @@
             </li>
             <li class="dropdown active"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
               <ol class="dropdown-menu">
+                <li><a href="about.html">Interests</a></li>
                 <li><a href="about.html">Hobbies</a></li>
-                <li><a href="about.html">Work</a></li>
-                <li class="divider"></li>
-                <li><a href="about.html">Goals</a></li>
+                <li><a href="about.html">Skills</a></li>
               </ol>
             </li>
           </ul>
