--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,6 @@
             <li><a href="index.html">Home</a></li>
             <li class="dropdown active"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="projects.html">Hobbies</a></li>
                 <li><a href="projects.html">Work</a></li>
                 <li class="divider"></li>
                 <li><a href="projects.html">Goals</a></li>
@@ -32,10 +31,9 @@
             </li>
             <li class="dropdown"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
               <ol class="dropdown-menu">
+                <li><a href="about.html">Interests</a></li>
                 <li><a href="about.html">Hobbies</a></li>
-                <li><a href="about.html">Work</a></li>
-                <li class="divider"></li>
-                <li><a href="about.html">Goals</a></li>
+                <li><a href="about.html">Skills</a></li>
               </ol>
             </li>
           </ul>
@@ -109,7 +107,7 @@
         </div>
         <div class="col-sm-4">
           <a href="https://github.com/alvindng/animal-shelter">Animal Shelter</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          <p>This project was to showcase the use of floats and how they can be used to create separate columns. HTML and CSS were used.<p>
           <div class="row">
             <div class="col-xs-11">
               <img class="img-responsive" src="img/dog.jpg" alt="dog" />
