--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li class="dropdown"><a data-toggle="dropdown" data-target="#">Projects<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="projects.html">Hobbies</a></li>
                 <li><a href="projects.html">Work</a></li>
                 <li class="divider"></li>
                 <li><a href="projects.html">Goals</a></li>
@@ -32,10 +31,9 @@
             </li>
             <li class="dropdown"><a data-toggle="dropdown" data-target="#">About Me<b class="caret"></b></a>
               <ol class="dropdown-menu">
+                <li><a href="about.html">Interests</a></li>
                 <li><a href="about.html">Hobbies</a></li>
-                <li><a href="about.html">Work</a></li>
-                <li class="divider"></li>
-                <li><a href="about.html">Goals</a></li>
+                <li><a href="about.html">Skills</a></li>
               </ol>
             </li>
           </ul>
@@ -43,7 +41,35 @@
       </div>
     </div>
     <!-- end nav -->
+    <!-- modal -->
+    <div class="modal fade" id="textmodal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">This is a Modal</h4>
+          </div>
+          <div class="modal-body">
+            <form class="form">
+              <div class="form-group">
+                <label class="sr-only" for="mobilePhone">Mobile Phone</label>
+                <input type="tel" class="form-control" id="mobilePhone"
+                placeholder="Mobile Phone">
+              </div>
+              <div class="form-group">
+                <select class="form-control">
+                  <option>Option 1</option>
+                  <option>Option 2</option>
+                </select>
+              </div>
+              <button type="submit" class="btn btn-primary form-control" data-dismiss="modal">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
 
+    </div>
+    <!-- end modal -->
     <!-- carousel -->
       <div id="mycarousel" class="carousel slide jumbotron">
         <div class="container">
@@ -58,13 +84,13 @@
                 <h1><strong>Alvin Ng</strong></h1>
                 <p>Welcome to my Website</p>
               </div>
-              <a class="btn btn-success" href="#">Ask me a question</a>
+              <a class="btn btn-success" data-toggle="modal" href="#textmodal">Ask me a question</a>
             </div>
             <div class="item">
               <h1><strong>Work</strong></h1>
               <p class="lead">Take a look at my past and current projects</p>
-              <a class="btn btn-success" href="#">Download my portfolio</a>
-              <a class="btn btn-primary" href="#">Download my app</a>
+              <a class="btn btn-success"  data-toggle="modal" href="#textmodal">Download my portfolio</a>
+              <a class="btn btn-primary" data-toggle="modal" href="#textmodal">Download my app</a>
             </div>
             <div class="item">
               <h1><strong>About Me</strong></h1>
