--- a/about.html
+++ b/about.html
@@ -106,27 +106,31 @@
     <!-- end carousel -->
     <!-- columns -->
     <div class="container">
-      <h1>p</h1>
+      <h1>Born and raised in <em>Chicago</em>.</h1>
       <div class="row">
         <div class="col-xs-4">
-          <h3>Thought 1</h3>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
+          <h3>Hobbies/Skills</h3>
+          I like finding new hobbies and trying to master new skills, such as:
           <div class="row">
             <div class="col-xs-6">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              <ul>
+                <li>archery</li>
+                <li>swimming</li>
+                <li>basketball</li>
+              </ul>
             </div>
             <div class="col-xs-6">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              <ul>
+                <li>skydiving</li>
+                <li>trapezing</li>
+                <li>fire breathing</li>
+              </ul>
             </div>
           </div>
         </div>
         <div class="col-xs-4">
-          <h3>Thought 2</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Background</h3>
+          <p>I received my education in the city of Chicago, from elementary school through to college. I graduated with a degree in Marketing and worked in the Advertising industry.<span> I hope to learn a lot from Epicodus so that I can make a transition into a new industry.</span></p>
           <div class="row">
             <div class="col-xs-12">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -134,8 +138,8 @@
           </div>
         </div>
         <div class="col-xs-4">
-          <h3>Thought 3</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          <h3>Interests</h3>
+          <p>I love animals- dogs in particular. I tend to like most breeds, especially if they look like the one pictured below:</p>
           <div class="row">
             <div class="col-xs-11">
               <img class="img-responsive" src="img/dog.jpg" alt="dog" />
