--- a/projects.html
+++ b/projects.html
@@ -130,10 +130,10 @@
         </div>
         <div class="col-sm-4">
           <a href="https://github.com/alvindng/favorite-band">Favorite Band</a>
-          <p>This project was to showcase the use of floats and how they can be used to create separate columns. HTML and CSS were used.</p>
+          <p>HTML and CSS were used on this website to display the upcoming show times for a band by floating a column to the right hand side.</p>
           <div class="row">
             <div class="col-xs-12">
-
+            <p>This project was exciting to work on because I had learned how to make floats, which allows me to make columns!</p>
             </div>
           </div>
         </div>
