--- a/index.html
+++ b/index.html
@@ -104,52 +104,10 @@
         </div>
       </div>
     <!-- end carousel -->
-    <!-- columns -->
+
     <div class="container">
-      <h1>p</h1>
-      <div class="row">
-        <div class="col-xs-4">
-          <h3>Thought 1</h3>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
-          <p>p</p>
-          <div class="row">
-            <div class="col-xs-6">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </div>
-            <div class="col-xs-6">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-4">
-          <h3>Thought 2</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="row">
-            <div class="col-xs-12">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-4">
-          <h3>Thought 3</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-          <div class="row">
-            <div class="col-xs-11">
-              <img class="img-responsive" src="img/dog.jpg" alt="dog" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- end columns -->
-    </div>
-
-    <!-- footer -->
-
-    <!-- end footer -->
+      <h1><strong>Thanks for visiting!</strong></h1>
+      <h3>Glad to have you here. Please feel free to take a look around. You'll find some <em>interesting</em> stuff about me.</h3>
 
     <!-- script -->
     <script src="js/jquery.js" charset="utf-8"></script>
